とりあえずの雰囲気

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Farming Company an Agriculture Category Flat Bootstrap responsive Website Template | Home :: w3layouts</title>
+<title>株式会社Clover 京都</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Farming Company Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+<meta name="keywords" content="Farming Company Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- bootstrap-css -->
@@ -20,7 +20,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
 <!--// css -->
 <!-- font-awesome icons -->
-<link href="css/font-awesome.css" rel="stylesheet"> 
+<link href="css/font-awesome.css" rel="stylesheet">
 <!-- //font-awesome icons -->
 <!-- font -->
 <link href="//fonts.googleapis.com/css?family=Righteous&subset=latin-ext" rel="stylesheet">
@@ -31,7 +31,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script src="js/SmoothScroll.min.js"></script>
 <script type="text/javascript">
 	jQuery(document).ready(function($) {
-		$(".scroll").click(function(event){		
+		$(".scroll").click(function(event){
 			event.preventDefault();
 			$('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
 		});
@@ -52,7 +52,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<span class="icon-bar"></span>
 				  </button>
 					<div class="w3layouts-logo">
-						<h1><a href="index.html">Farming <span>Company</span></a></h1>
+						<h1><a href="index.html">Clover <span>Company</span></a></h1>
 					</div>
 				</div>
 
@@ -66,7 +66,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<li><a href="#" class="dropdown-toggle hvr-sweep-to-bottom" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Codes<span class="caret"></span></a>
 								<ul class="dropdown-menu">
 									<li><a class="hvr-sweep-to-bottom" href="icons.html">Icons</a></li>
-									<li><a class="hvr-sweep-to-bottom" href="typography.html">Typography</a></li>          
+									<li><a class="hvr-sweep-to-bottom" href="typography.html">Typography</a></li>
 								</ul>
 							</li>
 							<li><a href="mail.html" class="hvr-sweep-to-bottom">Mail Us</a></li>
@@ -84,21 +84,51 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<section class="slider">
 					<div class="flexslider">
 						<ul class="slides">
-							<li>	
+							<li>
 								<div class="banner_text">
-									<h3>Lorem ipsum dolor sit</h3>
+									<h3>ゲストハウス運営</h3>
 									<div class="w3ls-line"> </div>
-									<p>Farming Company</p>
+									<p>Clover Kyoto</p>
 									<div class="w3-button">
 										<a href="single.html" class="btn btn-1 btn-1b">Read More</a>
 									</div>
 								</div>
 							</li>
-							<li>	
+							<li>
 								<div class="banner_text">
-									<h3>Nam semper nisi enim</h3>
+									<h3>清掃サービス</h3>
 									<div class="w3ls-line"> </div>
-									<p>Farming Company</p>
+									<p>Clover Kyoto</p>
+									<div class="w3-button">
+										<a href="single.html" class="btn btn-1 btn-1b">Read More</a>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="banner_text">
+									<h3>リネン貸出</h3>
+									<div class="w3ls-line"> </div>
+									<p>Clover Kyoto</p>
+									<div class="w3-button">
+										<a href="single.html" class="btn btn-1 btn-1b">Read More</a>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="banner_text">
+									<h3>宿泊業運営代行</h3>
+									<div class="w3ls-line"> </div>
+									<p>Clover Kyoto</p>
+									<div class="w3-button">
+										<a href="single.html" class="btn btn-1 btn-1b">Read More</a>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="banner_text">
+									<h3>リフォーム代理店</h3>
+									<div class="w3ls-line"> </div>
+									<p>Clover Kyoto</p>
 									<div class="w3-button">
 										<a href="single.html" class="btn btn-1 btn-1b">Read More</a>
 									</div>
@@ -135,9 +165,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="services-bottom">
 					<div class="services-grid">
 						<div class="col-md-6 services-grid-left">
-							<div class="services-icon"><i class="fa fa-envira" aria-hidden="true"></i></div> 
+							<div class="services-icon"><i class="fa fa-envira" aria-hidden="true"></i></div>
 							<div class="services-text">
-								<h4>Nunc vitae temporg</h4>
+								<h4>ゲストハウス運営</h4>
 								<p>Pellentesque non nibh ante. Cras hendrerit finibus eros eget elementum.</p>
 							</div>
 							<div class="clearfix"> </div>
@@ -147,14 +177,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="clearfix"> </div>
 					</div>
-					<div class="services-grid">					
+					<div class="services-grid">
 						<div class="col-md-6 services-grid-right ulta-grid">
 							<img src="images/4.jpg" alt="" />
 						</div>
 						<div class="col-md-6 services-grid-left ulta-grid">
-							<div class="services-icon"><i class="fa fa-magnet" aria-hidden="true"></i></div> 
+							<div class="services-icon"><i class="fa fa-magnet" aria-hidden="true"></i></div>
 							<div class="services-text">
-								<h4>Lorem Ipsum</h4>
+								<h4>清掃サービス</h4>
 								<p>Pellentesque non nibh ante. Cras hendrerit finibus eros eget elementum.</p>
 							</div>
 							<div class="clearfix"> </div>
@@ -163,9 +193,37 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="services-grid">
 						<div class="col-md-6 services-grid-left">
-							<div class="services-icon"><i class="fa fa-cog" aria-hidden="true"></i></div> 
+							<div class="services-icon"><i class="fa fa-cog" aria-hidden="true"></i></div>
 							<div class="services-text">
-								<h4>Excepteur Sint</h4>
+								<h4>リネン貸出</h4>
+								<p>Pellentesque non nibh ante. Cras hendrerit finibus eros eget elementum.</p>
+							</div>
+							<div class="clearfix"> </div>
+						</div>
+						<div class="col-md-6 services-grid-right">
+							<img src="images/6.jpg" alt="" />
+						</div>
+						<div class="clearfix"> </div>
+					</div>
+					<div class="services-grid">
+						<div class="col-md-6 services-grid-right ulta-grid">
+							<img src="images/4.jpg" alt="" />
+						</div>
+						<div class="col-md-6 services-grid-left ulta-grid">
+							<div class="services-icon"><i class="fa fa-magnet" aria-hidden="true"></i></div>
+							<div class="services-text">
+								<h4>宿泊業運営代行</h4>
+								<p>Pellentesque non nibh ante. Cras hendrerit finibus eros eget elementum.</p>
+							</div>
+							<div class="clearfix"> </div>
+						</div>
+						<div class="clearfix"> </div>
+					</div>
+					<div class="services-grid">
+						<div class="col-md-6 services-grid-left">
+							<div class="services-icon"><i class="fa fa-cog" aria-hidden="true"></i></div>
+							<div class="services-text">
+								<h4>リフォーム代理店</h4>
 								<p>Pellentesque non nibh ante. Cras hendrerit finibus eros eget elementum.</p>
 							</div>
 							<div class="clearfix"> </div>
@@ -184,7 +242,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- services-bottom -->
 	<div class="text-grid">
 		<div class="container">
-			<h4>Improve your Farming..!</h4>
+			<h4>お客様のビジネスチャンスを広げます</h4>
 			<p>Pellentesque non nibh ante. Cras hendrerit finibus eros eget elementum. Maecenas sed ultrices dui. Fusce id feugiat arcu. Vivamus sodales mauris sagittis sem tincidunt, vel pretium orci viverra. Nunc pretium, eros id aliquam cursus, tellus nisi gravida sapien, et eleifend ipsum erat eget nisl.</p>
 		</div>
 	</div>
@@ -193,7 +251,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="blog">
 		<div class="container">
 			<div class="services-heading">
-				<h3>Our Blog</h3>
+				<h3>ニュース</h3>
 				<div class="agileits-line"> </div>
 			</div>
 			<div class="agileinfo-blog-grids">
@@ -203,7 +261,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<a href="single.html"><img src="images/7.jpg" alt="" /></a>
 						</div>
 						<div class="w3-agileits-blog-text">
-							<a href="single.html">Fusce nec quam vulputate</a>
+							<a href="single.html">従業員募集中</a>
 							<p>Nunc vitae tempor dolor, sed euismod mauris. Vivamus ornare convallis tincidunt. Morbi orci leo, vulputate et aliquam nec, pulvinar sed nibh.</p>
 						</div>
 					</div>
@@ -214,7 +272,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<a href="single.html"><img src="images/8.jpg" alt="" /></a>
 						</div>
 						<div class="w3-agileits-blog-text">
-							<a href="single.html">Interdum et malesuada</a>
+							<a href="single.html">会社サイトをリニューアルしました</a>
 							<p>Nunc vitae tempor dolor, sed euismod mauris. Vivamus ornare convallis tincidunt. Morbi orci leo, vulputate et aliquam nec, pulvinar sed nibh.</p>
 						</div>
 					</div>
@@ -225,7 +283,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<a href="single.html"><img src="images/9.jpg" alt="" /></a>
 						</div>
 						<div class="w3-agileits-blog-text">
-							<a href="single.html">Vivamus ornare convallis</a>
+							<a href="single.html">役員人事について</a>
 							<p>Nunc vitae tempor dolor, sed euismod mauris. Vivamus ornare convallis tincidunt. Morbi orci leo, vulputate et aliquam nec, pulvinar sed nibh.</p>
 						</div>
 					</div>
@@ -241,9 +299,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="agileinfo_footer_grids">
 				<div class="col-md-4 agileinfo_footer_grid">
 					<div class="agile-logo">
-						<h4><a href="index.html">Farming <span>Company</span></a></h4>
+						<h4><a href="index.html">Clover <span>Company</span></a></h4>
 					</div>
-					<p>Etiam condimentum mi nec tortor euismod, id lobortis odio dictum. Cras 
+					<p>Etiam condimentum mi nec tortor euismod, id lobortis odio dictum. Cras
 						suscipit elit eget mi volutpat facilisis.</p>
 					<div class="agileinfo-social-grids">
 						<ul>
@@ -291,14 +349,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				containerID: 'toTop', // fading element id
 				containerHoverID: 'toTopHover', // fading element hover id
 				scrollSpeed: 1200,
-				easingType: 'linear' 
+				easingType: 'linear'
 				};
 			*/
-								
+
 			$().UItoTop({ easingType: 'easeOutQuart' });
-								
+
 			});
 	</script>
 <!-- //here ends scrolling icon -->
-</body>	
+</body>
 </html>
