--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>株式会社Clover 京都</title>
+  <title>株式会社Clover 京都</title>
+  <meta name="description" content="京都でゲストハウス運営、宿泊業代行、清掃、リフォーム代理店など幅広いサービスを提供しています。豊富なノウハウで細かいご要望にもお答えいたします。" />
+      <meta name="keywords" content="京都,ゲストハウス,清掃,リネンサプライ,宿泊業運営代行,リフォーム代理店,クリーニング,民泊,掃除代行" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Farming Company Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- bootstrap-css -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
@@ -52,7 +52,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<span class="icon-bar"></span>
 				  </button>
 					<div class="w3layouts-logo">
-						<h1><a href="index.html">Clover <span>Company</span></a></h1>
+						<h1><a href="index.html">Clover <span>Kyoto</span></a></h1>
 					</div>
 				</div>
 
@@ -62,14 +62,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<ul class="nav navbar-nav">
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="about.html" class="hvr-sweep-to-bottom">About</a></li>
-							<li><a href="gallery.html" class="hvr-sweep-to-bottom">Gallery</a></li>
 							<li><a href="#" class="dropdown-toggle hvr-sweep-to-bottom" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Codes<span class="caret"></span></a>
 								<ul class="dropdown-menu">
 									<li><a class="hvr-sweep-to-bottom" href="icons.html">Icons</a></li>
 									<li><a class="hvr-sweep-to-bottom" href="typography.html">Typography</a></li>
 								</ul>
 							</li>
-							<li><a href="mail.html" class="hvr-sweep-to-bottom">Mail Us</a></li>
+							<li><a href="mail.html" class="hvr-sweep-to-bottom">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -124,7 +123,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									</div>
 								</div>
 							</li>
-							<li>
+		    				        <li>
 								<div class="banner_text">
 									<h3>リフォーム代理店</h3>
 									<div class="w3ls-line"> </div>
@@ -243,7 +242,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="text-grid">
 		<div class="container">
 			<h4>お客様のビジネスチャンスを広げます</h4>
-			<p>Pellentesque non nibh ante. Cras hendrerit finibus eros eget elementum. Maecenas sed ultrices dui. Fusce id feugiat arcu. Vivamus sodales mauris sagittis sem tincidunt, vel pretium orci viverra. Nunc pretium, eros id aliquam cursus, tellus nisi gravida sapien, et eleifend ipsum erat eget nisl.</p>
+			<p>京都でゲストハウス運営、宿泊業代行、清掃、リフォーム代理店など幅広いサービスを提供しています。豊富なノウハウで細かいご要望にもお答えいたします。</p>
 		</div>
 	</div>
 	<!-- //services-bottom -->
@@ -251,7 +250,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="blog">
 		<div class="container">
 			<div class="services-heading">
-				<h3>ニュース</h3>
+				<h3>NEWS</h3>
 				<div class="agileits-line"> </div>
 			</div>
 			<div class="agileinfo-blog-grids">
@@ -299,7 +298,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="agileinfo_footer_grids">
 				<div class="col-md-4 agileinfo_footer_grid">
 					<div class="agile-logo">
-						<h4><a href="index.html">Clover <span>Company</span></a></h4>
+						<h4><a href="index.html">Clover <span>Kyoto</span></a></h4>
 					</div>
 					<p>Etiam condimentum mi nec tortor euismod, id lobortis odio dictum. Cras
 						suscipit elit eget mi volutpat facilisis.</p>
@@ -315,26 +314,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-4 agileinfo_footer_grid">
 					<h3>Contact Info</h3>
 					<ul class="agileinfo_footer_grid_list">
-						<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>1234k Avenue, 4th block, <span>New York City.</span></li>
+					  <li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>〒607-8473 京都市山科区北花山六反町26-55<span>テラスサンヒル203</span></li>
 						<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">info@example.com</a></li>
-						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+1234 567 567</li>
+						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>090-7967-3469(カシダ)</li>
 					</ul>
 				</div>
 				<div class="col-md-4 agileinfo_footer_grid">
 					<h3>Navigation</h3>
 					<ul class="agileinfo_footer_grid_nav">
 						<li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><a href="index.html">Home</a></li>
-						<li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><a href="about.html">About Us</a></li>
-						<li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><a href="gallery.html">Gallery</a></li>
-						<li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><a href="typography.html">Typography</a></li>
-						<li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><a href="icons.html">Icons</a></li>
-						<li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><a href="mail.html">Mail Us</a></li>
+						<li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><a href="about.html">About</a></li>
+						<li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><a href="mail.html">Contact</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 			<div class="w3agile_footer_copy">
-				<p>&copy; 2017 Farming Company. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+				<p>&copy; 2017 Clover Kyoto. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
 			</div>
 		</div>
 	</div>
