画像アップデート

--- a/index.html
+++ b/index.html
@@ -172,16 +172,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<div class="clearfix"> </div>
 						</div>
 						<div class="col-md-6 services-grid-right">
-							<img src="images/3.jpg" alt="" />
+							<img src="images/3.jpg" alt="" class="circle-thumb" />
 						</div>
 						<div class="clearfix"> </div>
 					</div>
 					<div class="services-grid">
 						<div class="col-md-6 services-grid-right ulta-grid">
-							<img src="images/4.jpg" alt="" />
+							<img src="images/4.jpg" alt="" class="circle-thumb"/>
 						</div>
 						<div class="col-md-6 services-grid-left ulta-grid">
-							<div class="services-icon"><i class="fa fa-magnet" aria-hidden="true"></i></div>
+							<div class="services-icon"><i class="fa fa-refresh" aria-hidden="true"></i></div>
 							<div class="services-text">
 								<h4>清掃サービス</h4>
 								<p>Pellentesque non nibh ante. Cras hendrerit finibus eros eget elementum.</p>
@@ -192,7 +192,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="services-grid">
 						<div class="col-md-6 services-grid-left">
-							<div class="services-icon"><i class="fa fa-cog" aria-hidden="true"></i></div>
+							<div class="services-icon"><i class="fa fa-moon-o" aria-hidden="true"></i></div>
 							<div class="services-text">
 								<h4>リネン貸出</h4>
 								<p>Pellentesque non nibh ante. Cras hendrerit finibus eros eget elementum.</p>
@@ -200,16 +200,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<div class="clearfix"> </div>
 						</div>
 						<div class="col-md-6 services-grid-right">
-							<img src="images/6.jpg" alt="" />
+							<img src="images/towel.jpg" alt="" class="circle-thumb"/>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
 					<div class="services-grid">
 						<div class="col-md-6 services-grid-right ulta-grid">
-							<img src="images/4.jpg" alt="" />
+							<img src="images/guesthouse2.jpg" alt="" class="circle-thumb"/>
 						</div>
 						<div class="col-md-6 services-grid-left ulta-grid">
-							<div class="services-icon"><i class="fa fa-magnet" aria-hidden="true"></i></div>
+							<div class="services-icon"><i class="fa fa-home" aria-hidden="true"></i></div>
 							<div class="services-text">
 								<h4>宿泊業運営代行</h4>
 								<p>Pellentesque non nibh ante. Cras hendrerit finibus eros eget elementum.</p>
@@ -220,7 +220,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="services-grid">
 						<div class="col-md-6 services-grid-left">
-							<div class="services-icon"><i class="fa fa-cog" aria-hidden="true"></i></div>
+							<div class="services-icon"><i class="fa fa-pencil" aria-hidden="true"></i></div>
 							<div class="services-text">
 								<h4>リフォーム代理店</h4>
 								<p>Pellentesque non nibh ante. Cras hendrerit finibus eros eget elementum.</p>
@@ -228,7 +228,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<div class="clearfix"> </div>
 						</div>
 						<div class="col-md-6 services-grid-right">
-							<img src="images/6.jpg" alt="" />
+							<img src="images/reform.jpg" alt="" class="circle-thumb"/>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -257,7 +257,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col-md-4 wthree-blog">
 					<div class="w3-agileits-blog">
 						<div class="w3-agileits-blog-img">
-							<a href="single.html"><img src="images/7.jpg" alt="" /></a>
+							<a href="single.html"><img src="images/flower.jpg" alt="" /></a>
 						</div>
 						<div class="w3-agileits-blog-text">
 							<a href="single.html">従業員募集中</a>
@@ -268,7 +268,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col-md-4 wthree-blog">
 					<div class="w3-agileits-blog">
 						<div class="w3-agileits-blog-img">
-							<a href="single.html"><img src="images/8.jpg" alt="" /></a>
+							<a href="single.html"><img src="images/flower2.jpg" alt="" /></a>
 						</div>
 						<div class="w3-agileits-blog-text">
 							<a href="single.html">会社サイトをリニューアルしました</a>
@@ -279,7 +279,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col-md-4 wthree-blog">
 					<div class="w3-agileits-blog">
 						<div class="w3-agileits-blog-img">
-							<a href="single.html"><img src="images/9.jpg" alt="" /></a>
+							<a href="single.html"><img src="images/flower3.jpg" alt="" /></a>
 						</div>
 						<div class="w3-agileits-blog-text">
 							<a href="single.html">役員人事について</a>
