--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 		<div class="services-text">
 		  <h4>清掃代行サービス</h4>
 		  <p>水回り、ベッドメイキング、消耗品の補充まできめ細やかに対応いたします。
-                    過去に取り扱った物件は高級物件も含め200件以上です。豊富な実績から作り上げた独自のノウハウが強みです。毎日10名前後のスタッフが出勤しております。
+                    高級物件・町家・マンションタイプを含め200件以上の実績があります。豊富な実績から作り上げた独自のノウハウが強みです。毎日10名前後のスタッフが出勤しております。
                   </p>
 		</div>
 		<div class="clearfix"> </div>
