--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 	    </div>
 
 	    <div class="services-grid" id="guesthouse-management">
-	      <div class="col-md-6 services-grid-left">
+	      <div class="col-md-6 services-grid-left ulta-grid">
 		<div class="services-icon"><i class="fa fa-envira" aria-hidden="true"></i></div>
 		<div class="services-text">
 		  <h4>ゲストハウス運営</h4>
@@ -229,17 +229,17 @@
 		</div>
 		<div class="clearfix"> </div>
 	      </div>
-	      <div class="col-md-6 services-grid-right">
+	      <div class="col-md-6 services-grid-right ulta-grid">
 		<img src="images/3.jpg" alt="" class="circle-thumb" />
 	      </div>
 	      <div class="clearfix"> </div>
 	    </div>
 
 	    <div class="services-grid" id="rental-rinen">
-	      <div class="col-md-6 services-grid-right">
+	      <div class="col-md-6 services-grid-right ulta-grid">
 		<img src="images/towel.jpg" alt="" class="circle-thumb"/>
 	      </div>
-	      <div class="col-md-6 services-grid-left">
+	      <div class="col-md-6 services-grid-left ulta-grid">
 		<div class="services-icon"><i class="fa fa-moon-o" aria-hidden="true"></i></div>
 		<div class="services-text">
 		  <h4>リネン貸出</h4>
