--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 		<div class="services-icon"><i class="fa fa-envira" aria-hidden="true"></i></div>
 		<div class="services-text">
 		  <h4>ゲストハウス運営</h4>
-		  <p>京都、二条駅近くで古民家をリノベージョンしたゲストハウスを運営しております。</p>
+		  <p>京都、二条駅近くで古民家をリノベーションしたゲストハウスを運営しております。</p>
 		</div>
 		<div class="clearfix"> </div>
 	      </div>
