--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>株式会社CLOVER 京都</title>
+    <title>CLOVER(ゲストハウス.ホテル)清掃/運営代行サービス</title>
     <!-- Search Engine -->
     <meta name="description" content="京都で清掃代行サービス、ゲストハウス運営、宿泊業代行、リフォームご相談など幅広いサービスを提供しています。豊富なノウハウで細かいご要望にもお答えいたします。">
     <meta name="image" content="https://i.gyazo.com/thumb/600/43e6b2b2d6f0b61f795558ae88988271-png.jpg">
