--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	      <ul class="nav navbar-nav">
 		<li class="active"><a href="index.html">ホーム</a></li>
 		<li><a href="about.html" class="hvr-sweep-to-bottom">会社概要</a></li>
-		<li><a href="contact-info" class="hvr-sweep-to-bottom">お問い合わせ</a></li>
+		<li><a href="#contact-info" class="hvr-sweep-to-bottom">お問い合わせ</a></li>
 	      </ul>
 	    </nav>
 	  </div>
