リネンを強化

--- a/about.html
+++ b/about.html
@@ -140,13 +140,13 @@
 		<div class="panel-heading" >
 		  <h4 class="panel-title asd">
 		    <a>
-		      従業員数
+		      スタッフ
 		    </a>
 		  </h4>
 		</div>
 		<div >
 		  <div class="panel-body panel_text">
-		    18名
+		    30名
 		  </div>
 		</div>
 	      </div>
