--- a/index.html
+++ b/index.html
@@ -110,31 +110,11 @@
 					</li>
 					<li>
 						<div class="banner_text">
-							<h3>ゲストハウス運営</h3>
-							<div class="w3ls-line"> </div>
-							<p>Clover Kyoto</p>
-							<div class="w3-button">
-								<a href="#guesthouse-management" class="btn btn-1 btn-1b">Read More</a>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="banner_text">
 							<h3>リネン販売・貸出</h3>
 							<div class="w3ls-line"> </div>
 							<p>Clover Kyoto</p>
 							<div class="w3-button">
 								<a href="#rental-rinen" class="btn btn-1 btn-1b">Read More</a>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="banner_text">
-							<h3>リフォーム代理店</h3>
-							<div class="w3ls-line"> </div>
-							<p>Clover Kyoto</p>
-							<div class="w3-button">
-								<a href="#reform" class="btn btn-1 btn-1b">Read More</a>
 							</div>
 						</div>
 					</li>
@@ -273,11 +253,11 @@
 							<li>随時昇給有り</li>
 							<li>登録制（主婦の方に安心）</li>
 							<li>年齢制限無し</li>
-							<li>時給 ¥950〜（研修期間有り）</li>
-						</ul></p>
-
+							<li>時給 ¥1000〜</li>
+						</ul>
+						</p>
 						<p>ご宿泊されますゲスト様を第一に考えて頂ける方、清掃が好きな方大歓迎です‼︎
-							気になる点は、<a href="#contact-info">こちら</a>にお問い合わせ下さい。</p>
+							気になる点は、<a href="mailto:contact@kyoto-clover.com">こちら</a>にお問い合わせ下さい。</p>
 					</div>
 				</div>
 			</div>
