udpate all contact to mailto:

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="index.html">ホーム</a></li>
 						<li><a href="about.html" class="hvr-sweep-to-bottom">会社概要</a></li>
-						<li><a href="#contact-info" class="hvr-sweep-to-bottom">お問い合わせ</a></li>
+						<li><a href="mailto:contact@kyoto-clover.com" class="hvr-sweep-to-bottom">お問い合わせ</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -279,7 +279,7 @@
 				<ul class="agileinfo_footer_grid_nav">
 					<li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><a href="index.html">ホーム</a></li>
 					<li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><a href="about.html">会社概要</a></li>
-					<li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><a href="#contact-info">お問い合わせ</a></li>
+					<li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><a href="mailto:contact@kyoto-clover.com">お問い合わせ</a></li>
 				</ul>
 			</div>
 			<div class="clearfix"> </div>
