:tada: 法人化 :tada:

--- a/about.html
+++ b/about.html
@@ -6,210 +6,258 @@
   -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>CLOVER(ゲストハウス.ホテル)清掃/運営代行サービス</title>
-    <!-- Search Engine -->
-    <meta name="description" content="京都で清掃代行サービス、ゲストハウス運営、宿泊業代行、リフォームご相談など幅広いサービスを提供しています。豊富なノウハウで細かいご要望にもお答えいたします。">
-    <meta name="image" content="https://i.gyazo.com/thumb/600/43e6b2b2d6f0b61f795558ae88988271-png.jpg">
-    <!-- Schema.org for Google -->
-    <meta itemprop="name" content="株式会社CLOVER 京都">
-    <meta itemprop="description" content="京都で清掃代行サービス、ゲストハウス運営、宿泊業代行、リフォームご相談など幅広いサービスを提供しています。豊富なノウハウで細かいご要望にもお答えいたします。">
-    <meta itemprop="image" content="https://i.gyazo.com/thumb/600/43e6b2b2d6f0b61f795558ae88988271-png.jpg">
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="株式会社CLOVER 京都">
-    <meta name="twitter:description" content="京都で清掃代行サービス、ゲストハウス運営、宿泊業代行、リフォームご相談など幅広いサービスを提供しています。豊富なノウハウで細かいご要望にもお答えいたします。">
-    <meta name="twitter:image:src" content="https://i.gyazo.com/thumb/600/43e6b2b2d6f0b61f795558ae88988271-png.jpg">
-    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta name="og:title" content="株式会社CLOVER 京都">
-    <meta name="og:description" content="京都で清掃代行サービス、ゲストハウス運営、宿泊業代行、リフォームご相談など幅広いサービスを提供しています。豊富なノウハウで細かいご要望にもお答えいたします。">
-    <meta name="og:image" content="https://i.gyazo.com/thumb/600/43e6b2b2d6f0b61f795558ae88988271-png.jpg">
-    <meta name="og:url" content="http://kyoto-clover.com">
-    <meta name="og:site_name" content="株式会社CLOVER 京都">
-    <meta name="og:locale" content="ja_JP">
-    <meta name="og:type" content="website"><title>株式会社Clover 京都</title>
-    <meta name="keywords" content="京都,ゲストハウス,清掃代行,リネンサプライ,宿泊業運営代行,リフォーム代理店,クリーニング,民泊,掃除代行" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-    <!-- bootstrap-css -->
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-    <!--// bootstrap-css -->
-    <!-- css -->
-    <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
-    <!--// css -->
-    <!-- font-awesome icons -->
-    <link href="css/font-awesome.css" rel="stylesheet">
-    <!-- //font-awesome icons -->
-    <!-- font -->
-    <link href="//fonts.googleapis.com/css?family=Righteous&subset=latin-ext" rel="stylesheet">
-    <link href='//fonts.googleapis.com/css?family=Roboto+Condensed:400,700italic,700,400italic,300italic,300' rel='stylesheet' type='text/css'>
-    <!-- //font -->
-    <script src="js/jquery-1.11.1.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/SmoothScroll.min.js"></script>
-    <script type="text/javascript">
-      jQuery(document).ready(function($) {
-      $(".scroll").click(function(event){
-      event.preventDefault();
-      $('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
-      });
-      });
-    </script>
-  </head>
-  <body>
-    <!-- header -->
-    <div class="header">
-      <div class="container">
-	<nav class="navbar navbar-default">
-	  <!-- Brand and toggle get grouped for better mobile display -->
-	  <div class="navbar-header">
-	    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-	      <span class="sr-only">Toggle navigation</span>
-	      <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-	      <span class="icon-bar"></span>
-	    </button>
-	    <div class="w3layouts-logo">
-	      <h1><a href="index.html">Clover <span>Kyoto</span></a></h1>
-	    </div>
-	  </div>
+<head>
+	<meta charset="utf-8">
+	<title>株式会社CLOVER(ゲストハウス.ホテル)清掃/運営代行サービス</title>
+	<!-- Search Engine -->
+	<meta name="description" content="京都で清掃代行サービス、ゲストハウス運営、宿泊業代行、リフォームご相談など幅広いサービスを提供しています。豊富なノウハウで細かいご要望にもお答えいたします。">
+	<meta name="image" content="https://i.gyazo.com/thumb/600/43e6b2b2d6f0b61f795558ae88988271-png.jpg">
+	<!-- Schema.org for Google -->
+	<meta itemprop="name" content="株式会社CLOVER 京都">
+	<meta itemprop="description" content="京都で清掃代行サービス、ゲストハウス運営、宿泊業代行、リフォームご相談など幅広いサービスを提供しています。豊富なノウハウで細かいご要望にもお答えいたします。">
+	<meta itemprop="image" content="https://i.gyazo.com/thumb/600/43e6b2b2d6f0b61f795558ae88988271-png.jpg">
+	<!-- Twitter -->
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:title" content="株式会社CLOVER 京都">
+	<meta name="twitter:description" content="京都で清掃代行サービス、ゲストハウス運営、宿泊業代行、リフォームご相談など幅広いサービスを提供しています。豊富なノウハウで細かいご要望にもお答えいたします。">
+	<meta name="twitter:image:src" content="https://i.gyazo.com/thumb/600/43e6b2b2d6f0b61f795558ae88988271-png.jpg">
+	<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+	<meta name="og:title" content="株式会社CLOVER 京都">
+	<meta name="og:description" content="京都で清掃代行サービス、ゲストハウス運営、宿泊業代行、リフォームご相談など幅広いサービスを提供しています。豊富なノウハウで細かいご要望にもお答えいたします。">
+	<meta name="og:image" content="https://i.gyazo.com/thumb/600/43e6b2b2d6f0b61f795558ae88988271-png.jpg">
+	<meta name="og:url" content="http://kyoto-clover.com">
+	<meta name="og:site_name" content="株式会社CLOVER 京都">
+	<meta name="og:locale" content="ja_JP">
+	<meta name="og:type" content="website"><title>株式会社Clover 京都</title>
+	<meta name="keywords" content="京都,ゲストハウス,清掃代行,リネンサプライ,宿泊業運営代行,リフォーム代理店,クリーニング,民泊,掃除代行" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+	<!-- bootstrap-css -->
+	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+	<!--// bootstrap-css -->
+	<!-- css -->
+	<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
+	<!--// css -->
+	<!-- font-awesome icons -->
+	<link href="css/font-awesome.css" rel="stylesheet">
+	<!-- //font-awesome icons -->
+	<!-- font -->
+	<link href="//fonts.googleapis.com/css?family=Righteous&subset=latin-ext" rel="stylesheet">
+	<link href='//fonts.googleapis.com/css?family=Roboto+Condensed:400,700italic,700,400italic,300italic,300' rel='stylesheet' type='text/css'>
+	<!-- //font -->
+	<script src="js/jquery-1.11.1.min.js"></script>
+	<script src="js/bootstrap.js"></script>
+	<script src="js/SmoothScroll.min.js"></script>
+	<script type="text/javascript">
+		jQuery(document).ready(function($) {
+			$(".scroll").click(function(event){
+				event.preventDefault();
+				$('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
+			});
+		});
+	</script>
+</head>
+<body>
+<!-- header -->
+<div class="header">
+	<div class="container">
+		<nav class="navbar navbar-default">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<div class="w3layouts-logo">
+					<h1><a href="index.html">Clover<span>Kyoto</span></a></h1>
+				</div>
+			</div>
 
-	  <!-- Collect the nav links, forms, and other content for toggling -->
-	  <div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
-	    <nav>
-	      <ul class="nav navbar-nav">
-		<li class="active"><a href="index.html">ホーム</a></li>
-		<li><a href="about.html" class="hvr-sweep-to-bottom">会社概要</a></li>
-		<li><a href="#contact-info" class="hvr-sweep-to-bottom">お問い合わせ</a></li>
-	      </ul>
-	    </nav>
-	  </div>
-	  <!-- /.navbar-collapse -->
-	</nav>
-      </div>
-    </div>
-    <!-- //header -->
-    <!-- banner -->
-    <div class="banner about-banner">
-      <div class="container">
-	<h2>About Us</h2>
-	<div class="agileits-line"> </div>
-      </div>
-    </div>
-    <!-- //banner -->
-    <!-- about -->
-    <!-- about-top -->
-    <div class="about-top">
-      <div class="container">
-	<div class="about-w3ls-row">
-	  <div class="col-md-8 col-md-offset-2 about-right">
-	    <h5>会社概要</h5>
-	    <!-- history -->
-	    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-	      <div class="panel panel-default">
-		<div class="panel-heading" role="tab" id="headingOne">
-		  <h4 class="panel-title asd">
-		    <a class="pa_italic" >
-		      創業
-		    </a>
-		  </h4>
-		</div>
-		<div >
-		  <div class="panel-body panel_text">
-		    2014年4月
-		  </div>
-		</div>
-	      </div>
-	      <div class="panel panel-default">
-		<div class="panel-heading" >
-		  <h4 class="panel-title asd">
-		    <a>
-		      代表
-		    </a>
-		  </h4>
-		</div>
-		<div >
-		  <div class="panel-body panel_text">
-		    樫田 将志
-		  </div>
-		</div>
-	      </div>
-	      <div class="panel panel-default">
-		<div class="panel-heading" >
-		  <h4 class="panel-title asd">
-		    <a>
-		      スタッフ
-		    </a>
-		  </h4>
-		</div>
-		<div >
-		  <div class="panel-body panel_text">
-		    30名
-		  </div>
-		</div>
-	      </div>
-	    </div>
-	    <!-- //history -->
-	  </div>
-	  <div class="clearfix"> </div>
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
+				<nav>
+					<ul class="nav navbar-nav">
+						<li class="active"><a href="index.html">ホーム</a></li>
+						<li><a href="about.html" class="hvr-sweep-to-bottom">会社概要</a></li>
+						<li><a href="#contact-info" class="hvr-sweep-to-bottom">お問い合わせ</a></li>
+					</ul>
+				</nav>
+			</div>
+			<!-- /.navbar-collapse -->
+		</nav>
 	</div>
-      </div>
-    </div>
-
-    <!-- footer -->
-    <div class="footer">
-      <div class="container">
-	<div class="agileinfo_footer_grids">
-	  <div class="col-md-4 agileinfo_footer_grid">
-	    <div class="agile-logo">
-	      <h4><a href="index.html">Clover <span>Kyoto</span></a></h4>
-	    </div>
-	    <p></p>
-	  </div>
-	  <div class="col-md-4 agileinfo_footer_grid" id="contact-info">
-	    <h3>お問い合わせ</h3>
-	    <ul class="agileinfo_footer_grid_list">
-	      <li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>〒607-8035 京都市山科区四ノ宮神田町<span>42-24</span></li>
-	      <li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:contact@kyoto-clover.com">contact@kyoto-clover.com</a></li>
-	      <li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>090-7967-3469</li>
-	    </ul>
-	  </div>
-	  <div class="col-md-4 agileinfo_footer_grid">
-	    <h3>ナビゲーション</h3>
-	    <ul class="agileinfo_footer_grid_nav">
-	      <li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><a href="index.html">ホーム</a></li>
-	      <li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><a href="about.html">会社概要</a></li>
-	      <li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><a href="#contact-info">お問い合わせ</a></li>
-	    </ul>
-	  </div>
-	  <div class="clearfix"> </div>
+</div>
+<!-- //header -->
+<!-- banner -->
+<div class="banner about-banner">
+	<div class="container">
+		<h2>About Us</h2>
+		<div class="agileits-line"> </div>
 	</div>
-	<div class="w3agile_footer_copy">
-	  <p>&copy; 2017 Clover Kyoto. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+</div>
+<!-- //banner -->
+<!-- about -->
+<!-- about-top -->
+<div class="about-top">
+	<div class="container">
+		<div class="about-w3ls-row">
+			<div class="col-md-8 col-md-offset-2 about-right">
+				<h5>会社概要</h5>
+				<!-- history -->
+				<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingOne">
+							<h4 class="panel-title asd">
+								<a class="pa_italic" >
+									沿革
+								</a>
+							</h4>
+						</div>
+						<div>
+							<div class="panel-body panel_text">
+								2014年4月  CLOVER として清掃業務を開始<br>
+								2016年4月  人員を10人に増員<br>
+								2017年4月  リネンサプライ業務を開始<br>
+								2020年12月 株式会社CLOVERとして法人化・事業所移転
+							</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" >
+							<h4 class="panel-title asd">
+								<a>
+									本社所在地
+								</a>
+							</h4>
+						</div>
+						<div >
+							<div class="panel-body panel_text">
+								〒 607-8465　京都府京都市山科区上花山坂尻3-4
+							</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" >
+							<h4 class="panel-title asd">
+								<a>
+									代表取締役
+								</a>
+							</h4>
+						</div>
+						<div >
+							<div class="panel-body panel_text">
+								樫田 加奈子
+							</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" >
+							<h4 class="panel-title asd">
+								<a>
+									従業員（パート・アルバイト含む）
+								</a>
+							</h4>
+						</div>
+						<div >
+							<div class="panel-body panel_text">
+								35名
+							</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" >
+							<h4 class="panel-title asd">
+								<a>
+									資本金
+								</a>
+							</h4>
+						</div>
+						<div >
+							<div class="panel-body panel_text">
+								100万円
+							</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" >
+							<h4 class="panel-title asd">
+								<a>
+									事業内容
+								</a>
+							</h4>
+						</div>
+						<div >
+							<div class="panel-body panel_text">
+								宿泊施設等の清掃業<br>
+								リネンサプライ業<br>
+								寝具及び繊維製品の販売業<br>
+								金属金物の加工及び取付等の板金工事業
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- //history -->
+			</div>
+			<div class="clearfix"> </div>
+		</div>
 	</div>
-      </div>
-    </div>
-    <!-- //footer -->
-    <script type="text/javascript" src="js/move-top.js"></script>
-    <script type="text/javascript" src="js/easing.js"></script>
-    <!-- here stars scrolling icon -->
-    <script type="text/javascript">
-      $(document).ready(function() {
-      /*
-      var defaults = {
-      containerID: 'toTop', // fading element id
-      containerHoverID: 'toTopHover', // fading element hover id
-      scrollSpeed: 1200,
-      easingType: 'linear'
-      };
-      */
+</div>
 
-      $().UItoTop({ easingType: 'easeOutQuart' });
+<!-- footer -->
+<div class="footer">
+	<div class="container">
+		<div class="agileinfo_footer_grids">
+			<div class="col-md-4 agileinfo_footer_grid">
+				<div class="agile-logo">
+					<h4><a href="index.html">Clover <span>Kyoto</span></a></h4>
+				</div>
+				<p></p>
+			</div>
+			<div class="col-md-4 agileinfo_footer_grid" id="contact-info">
+				<h3>お問い合わせ</h3>
+				<ul class="agileinfo_footer_grid_list">
+					<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>〒607-8465  京都府京都市山科区上花山坂尻<span>3-4</span></li>
+					<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:contact@kyoto-clover.com">contact@kyoto-clover.com</a></li>
+					<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>090-7967-3469</li>
+				</ul>
+			</div>
+			<div class="col-md-4 agileinfo_footer_grid">
+				<h3>ナビゲーション</h3>
+				<ul class="agileinfo_footer_grid_nav">
+					<li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><a href="index.html">ホーム</a></li>
+					<li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><a href="about.html">会社概要</a></li>
+					<li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><a href="#contact-info">お問い合わせ</a></li>
+				</ul>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+		<div class="w3agile_footer_copy">
+			<p>&copy; 2017 Clover Kyoto. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+		</div>
+	</div>
+</div>
+<!-- //footer -->
+<script type="text/javascript" src="js/move-top.js"></script>
+<script type="text/javascript" src="js/easing.js"></script>
+<!-- here stars scrolling icon -->
+<script type="text/javascript">
+	$(document).ready(function() {
+		/*
+        var defaults = {
+        containerID: 'toTop', // fading element id
+        containerHoverID: 'toTopHover', // fading element hover id
+        scrollSpeed: 1200,
+        easingType: 'linear'
+        };
+        */
 
-      });
-    </script>
-    <!-- //here ends scrolling icon -->
-  </body>
+		$().UItoTop({ easingType: 'easeOutQuart' });
+
+	});
+</script>
+<!-- //here ends scrolling icon -->
+</body>
 </html>
