--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
-<!--A Design by W3layouts
-    Author: W3layout
-    Author URL: http://w3layouts.com
-    License: Creative Commons Attribution 3.0 Unported
-    License URL: http://creativecommons.org/licenses/by/3.0/
-  -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>CLOVER 清掃代行・リネンサービス</title>
+	<title>株式会社CLOVER ─── 清掃代行・リネンサービス</title>
 	<!-- Search Engine -->
 	<meta name="content" content="京都で清掃代行、リネンサプライやリフォームご相談など幅広いサービスを提供しています。豊富なノウハウで細かいご要望にもお答えいたします。">
 	<meta name="description" content="京都で清掃代行、リネンサプライやリフォームご相談など幅広いサービスを提供しています。豊富なノウハウで細かいご要望にもお答えいたします。">
@@ -73,7 +67,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<div class="w3layouts-logo">
-					<h1><a href="index.html">Clover <span>Kyoto</span></a></h1>
+					<h1><a href="index.html">Clover<span>Kyoto</span></a></h1>
 				</div>
 			</div>
 
@@ -204,7 +198,19 @@
 			<h3>NEWS</h3>
 			<div class="agileits-line"> </div>
 		</div>
+
 		<div class="agileinfo-blog-grids">
+			<div class="col-md-4 wthree-blog">
+				<div class="w3-agileits-blog">
+					<div class="w3-agileits-blog-img">
+						<a href="#"><img src="images/expand-biz.jpg" alt="" style="min-height:265px"/></a>
+					</div>
+					<div class="w3-agileits-blog-text">
+						<a href="#">法人化について</a>
+						<p>更なる飛躍を目指し。CLOVERを法人化いたしました。今後ともよろしくお願い申し上げます。</p>
+					</div>
+				</div>
+			</div>
 			<div class="col-md-4 wthree-blog">
 				<div class="w3-agileits-blog">
 					<div class="w3-agileits-blog-img">
@@ -235,19 +241,8 @@
 						<a href="#"><img src="images/flower2.jpg" alt="" /></a>
 					</div>
 					<div class="w3-agileits-blog-text">
-						<a href="#">会社サイトをリニューアルしました</a>
+						<a href="#">サイトをリニューアルしました</a>
 						<p></p>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4 wthree-blog">
-				<div class="w3-agileits-blog">
-					<div class="w3-agileits-blog-img">
-						<a href="#"><img src="images/expand-biz.jpg" alt="" style="min-height:265px"/></a>
-					</div>
-					<div class="w3-agileits-blog-text">
-						<a href="#">業務拡大について</a>
-						<p>お陰様でご提携企業様が増え、宿泊業代行サービスやリフォームのご相談も可能となりました。ぜひお気軽にお問い合わせください。</p>
 					</div>
 				</div>
 			</div>
@@ -269,7 +264,7 @@
 			<div class="col-md-4 agileinfo_footer_grid" id="contact-info">
 				<h3>お問い合わせ</h3>
 				<ul class="agileinfo_footer_grid_list">
-					<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>〒607-8035<span>京都市山科区四ノ宮神田町</span><span>42-24</span></li>
+					<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>〒607-8465<span>京都府京都市山科区上花山坂尻</span><span>3-4</span></li>
 					<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:contact@kyoto-clover.com">contact@kyoto-clover.com</a></li>
 					<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>090-7967-3469</li>
 				</ul>
@@ -285,7 +280,7 @@
 			<div class="clearfix"> </div>
 		</div>
 		<div class="w3agile_footer_copy">
-			<p>&copy; 2020 Clover Kyoto. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+			<p>&copy; 2021 Clover Corp. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
 		</div>
 	</div>
 </div>
