--- a/about.html
+++ b/about.html
@@ -121,7 +121,10 @@
 								2014年4月  CLOVER として清掃業務を開始<br>
 								2016年4月  人員を10人に増員<br>
 								2017年4月  リネンサプライ業務を開始<br>
-								2020年12月 株式会社CLOVERとして法人化・事業所移転
+								2020年12月 株式会社CLOVERとして法人化・事業所移転<br>
+								2022年9月 神戸・淡路島支店開設<br>
+								2023年12月　コインランドリーOpen<br>
+								2023年12月　事務所移転
 							</div>
 						</div>
 					</div>
@@ -163,7 +166,7 @@
 						</div>
 						<div >
 							<div class="panel-body panel_text">
-								35名
+								50名
 							</div>
 						</div>
 					</div>
@@ -177,7 +180,7 @@
 						</div>
 						<div >
 							<div class="panel-body panel_text">
-								100万円
+								300万円
 							</div>
 						</div>
 					</div>
@@ -194,7 +197,8 @@
 								宿泊施設等の清掃業<br>
 								リネンサプライ業<br>
 								寝具及び繊維製品の販売業<br>
-								金属金物の加工及び取付等の板金工事業
+								金属金物の加工及び取付等の板金工事業<br>
+								コインランドリー事業
 							</div>
 						</div>
 					</div>
@@ -219,7 +223,7 @@
 			<div class="col-md-4 agileinfo_footer_grid" id="contact-info">
 				<h3>お問い合わせ</h3>
 				<ul class="agileinfo_footer_grid_list">
-					<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>〒607-8465  京都府京都市山科区上花山坂尻<span>3-4</span></li>
+					<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>〒604-8457 京都府京都市中京区西ノ京馬代町<span>２１−５</span><span>LA VITA テナント2号室</span></li>
 					<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:contact@kyoto-clover.com">contact@kyoto-clover.com</a></li>
 					<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>090-7967-3469</li>
 				</ul>
