--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
 						</div>
 						<div >
 							<div class="panel-body panel_text">
-								〒 607-8465　京都府京都市山科区上花山坂尻3-4
+								〒604-8457 京都府京都市中京区西ノ京馬代町　２１−５　LA VITA テナント2号室
 							</div>
 						</div>
 					</div>
