--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 			<div class="col-md-4 agileinfo_footer_grid" id="contact-info">
 				<h3>お問い合わせ</h3>
 				<ul class="agileinfo_footer_grid_list">
-					<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>〒607-8465<span>京都府京都市山科区上花山坂尻</span><span>3-4</span></li>
+					<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>〒604-8457<span>京都府京都市中京区西ノ京馬代町</span><span>21−5 LA VITA テナント2号室</span></li>
 					<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:contact@kyoto-clover.com">contact@kyoto-clover.com</a></li>
 					<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>090-7967-3469</li>
 				</ul>
